src/objects/E2_System_setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting object to store estimator 2.0 system settings</description>
    <fields>
        <fullName>Fixed_Fee_Buffer__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Fixed Fee Buffer %</description>
        <inlineHelpText>Fixed Fee Buffer %</inlineHelpText>
        <label>Fixed Fee Buffer:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fixed_Fee_Cost_Uplift__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Fixed Fee Cost Uplift Percent of Service Costs</description>
        <inlineHelpText>Fixed Fee Cost Uplift Percent of Service Costs</inlineHelpText>
        <label>Fixed Fee Cost Uplift</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Floor_Safe__c</fullName>
        <label>Floor Safe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Refresh_Ratacard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to control refresh rates and cost of resources in estimate from e2 timeline page.</description>
        <inlineHelpText>Field to control refresh rates and cost of resources in estimate from e2 timeline page.</inlineHelpText>
        <label>Refresh Ratacard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timeline_Discounts__c</fullName>
        <label>Timeline Discounts</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>E2 System Settings</label>
</CustomObject>